Added new menu item of theme

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -9,6 +9,7 @@
     <string name="remind">提醒</string>
     <string name="favorite">喜欢</string>
     <string name="setting">设置</string>
+    <string name="theme">主题</string>
     <string name="coming_soon">下个版本添加</string>
 
     <string name="part_1">第一部分</string>
