--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="remind">Remind</string>
     <string name="favorite">Favorite</string>
     <string name="setting">Setting</string>
+    <string name="theme">主题</string>
     <string name="coming_soon">Coming Soon</string>
 
     <string name="part_1">Part one</string>
